--- a/wasm/web/index.html
+++ b/wasm/web/index.html
@@ -111,26 +111,14 @@
               return Button.Joypad1Right;
             case 40: // Down
               return Button.Joypad1Down;
-            case 50: // 2
-              return Button.Joypad2Down;
-            case 52: // 4
-              return Button.Joypad2Left;
-            case 54: // 6
-              return Button.Joypad2Right;
-            case 56: // 8
-              return Button.Joypad2Up;
             case 65: // A
               return Button.Joypad1A;
-            case 66: // B
-              return Button.Joypad1B;
-            case 82: // R
-              return Button.Reset;
             case 83: // S
+              return Button.Joypad1B;
+            case 80: // P
+              return Button.Reset;
+            case 66: // B
               return Button.Select;
-            case 88: // X
-              return Button.Joypad2A;
-            case 90: // Z
-              return Button.Joypad2B;
             default:
               return null; 
           }
@@ -244,52 +232,42 @@
         <tr>
           <th></th>
           <th>Player 1</th>
-          <th>Player 2</th>
         </tr>
         <tr>
           <td>Down</td>
           <td>Down</td>
-          <td>2</td>
         </tr>
         <tr>
           <td>Left</td>
           <td>Left</td>
-          <td>4</td>
         </tr>
         <tr>
           <td>Right</td>
           <td>Right</td>
-          <td>6</td>
         </tr>
         <tr>
           <td>Up</td>
           <td>Up</td>
-          <td>8</td>
         </tr>
         <tr>
           <td>A</td>
           <td>A</td>
-          <td>X</td>
         </tr>
         <tr>
           <td>B</td>
-          <td>B</td>
-          <td>Z</td>
+          <td>S</td>
         </tr>
         <tr>
           <td>Start</td>
           <td>Space</td>
-          <td>-</td>
         </tr>
         <tr>
           <td>Select</td>
-          <td>S</td>
-          <td>-</td>
+          <td>B</td>
         </tr>
         <tr>
           <td>Reset</td>
-          <td>R</td>
-          <td>-</td>
+          <td>P</td>
         </tr>
       </table>
     </div>
